# lens_brain

./: .gitignore  pyproject.toml
src/face_recognition/: encodings.pickle  recognize_faces_video.py  train.py
src/face_recognition/lib/misc/: convenience.py
src/face_recognition/lib/video/: cam_video_stream.py  fps.py
tests/: test_face_recognition.py
