[tool.poetry]
name = "face_recognition"
version = "0.1.0"
description = ""
authors = ["HusseinAzeez <hussein.azeez91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
