[tool.poetry]
name = "AOT"
version = "0.1.0"
description = ""
authors = ["HusseinAzeez <hussein.azeez91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.5.3"
opencv-python = "^4.3.0"
numpy = "^1.19.1"
dlib = "^19.21.0"
face_recognition = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
